--- a/src/main/resources/simple-rpc.properties
+++ b/src/main/resources/simple-rpc.properties
@@ -1,20 +1,20 @@
 # 注册中心ZK地址,必须配置,没有默认值
-vivo.rpc.zookeeper.address=localhost:2181
+simple.rpc.zookeeper.address=localhost:2181
 # session超时时间,默认500
-vivo.rpc.zookeeper.session.timeout=3000
+simple.rpc.zookeeper.session.timeout=3000
 # 连接超时时间,默认500
-vivo.rpc.zookeeper.connection.timeout=3000
+simple.rpc.zookeeper.connection.timeout=3000
 # 负载均衡默认策略可选值: Random / WeightRandom / Polling / WeightPolling / Hash. 如果配置错误,则使用Random策略
-vivo.rpc.client.clusterStrategy.default=WeightRandom
-# 客户端对每个主机的连接channel数量,默认:10
-vivo.rpc.client.channelSize=10
-# 客户端调用rpc服务线程池的线程数,默认:10
-vivo.rpc.client.threadWorkers=10
+simple.rpc.client.clusterStrategy.default=WeightRandom
+# 客户端对每个主机的初始化Channel数量,默认:10
+simple.rpc.client.channelPoolSize=10
+# 客户端调用RPC服务线程池的线程数,默认:10
+simple.rpc.client.threadWorkers=10
 # 发布服务时的默认命名空间(标签没有配置appName属性时采用)
-vivo.rpc.server.app.name=test
+simple.rpc.server.app.name=test
 # 引入服务时的默认命名空间(标签没有配置appName属性时采用)
-vivo.rpc.client.app.name=test
+simple.rpc.client.app.name=test
 # 服务端序列化协议,默认:Default.可选值:Default(ProtoStuff) / Hessian
-vivo.rpc.server.serializer=Default
+simple.rpc.server.serializer=Default
 # 客户端序列化协议,默认:Default.可选值:Default(ProtoStuff) / Hessian
-vivo.rpc.client.serializer=Hessian
+simple.rpc.client.serializer=Default
